--- a/client/public/styles.css
+++ b/client/public/styles.css
@@ -1,3 +1,11 @@
+body{
+    background-color: beige;
+}
+
+.navbar{
+    background-color: #ce9999;
+}
+
 .remove-btn{
     margin-right: 0.5rem;
 }
